auto-fit button correctly resizes text to remove horizontal scrollbar

--- a/css/lyrics_app.css
+++ b/css/lyrics_app.css
@@ -91,7 +91,7 @@ body {
     column-fill: auto;
     height: 100%;
     width: 100%;
-    /* overflow-y: auto; */
+    overflow-y: auto;
     padding: 0.5em;
     white-space: pre-wrap;
     font-family: Arial, sans-serif;
